# rp2040-sensor

./: .gitignore  data1.txt  win_test.py
firmware/: Cargo.toml  README.md  memory.x
firmware-emb/: Cargo.toml  firmware-emb.code-workspace
firmware-emb/.cargo/: config.toml
firmware-emb/src/: main.rs
firmware/.cargo/: config.toml
firmware/src/: main.rs  orig_main.rs
pyfirm/: sample-sensor.py  sensor.py
sensor-pod-main/: .gitignore  Cargo.toml  Embed.toml  README.md  firmware.uf2  memory.x  rust-toolchain.toml
sensor-pod-main/boot/: Cargo.toml  memory.x
sensor-pod-main/boot/src/: main.rs
sensor-pod-main/src/: config.rs  icd.rs  json.rs  main.rs
sensor-pod-main/src/adxl343/: mod.rs  register.rs
