[package]
authors = ["the rp-rs team"]
edition = "2018"
readme = "README.md"
name = "sensor-pod-fw"
version = "0.1.0"
resolver = "2"

# [features]
# restore-state-bool

[dependencies]
fugit = "0.3.6"
cortex-m = { version = "0.7.6" } #, features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.2"
alloc-cortex-m = "0.4.3"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-time = "0.12.0"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
adxl343 = { version = "0.8.0", git = "https://github.com/tufelkinder/ADXL343.rs" }
accelerometer = "0.12.0"
heapless =  "0.7.16"
rp2040-hal = { version="0.6.1", features=["rt"] }
rp2040-boot2 = "0.2.1"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
