[package]
name = "sensor-pod"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.1.0", features = ["defmt", "integrated-timers"] }
embassy-sync = { version = "0.1.0", features = ["defmt"] }
embassy-time = { version = "0.1.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-boot-rp = { version = "0.1.0", default-features = false }
embassy-usb-logger = { version = "0.1.0" }

atomic-polyfill = "0.1.5"
static_cell = "1.0"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = "0.7.6"
cortex-m-rt = "0.7.0"
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }

embedded-hal-1 = { package = "embedded-hal", version = "1.0.0-alpha.9" }
embedded-hal-async = { version = "0.2.0-alpha.0" }
embedded-io = { version = "0.4.0", features = ["async", "defmt"] }

heapless = { version = "0.7.16", features = ["defmt-impl", "serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.5.0"
postcard = "0.7.0"
log = "0.4"

bitflags = "1"
panic-reset = "0.1.1"

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "35afb60dd490d95a972ad64db8a38652538bceba" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "35afb60dd490d95a972ad64db8a38652538bceba" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "35afb60dd490d95a972ad64db8a38652538bceba" }
embassy-hal-common = { git = "https://github.com/embassy-rs/embassy", rev = "35afb60dd490d95a972ad64db8a38652538bceba" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "35afb60dd490d95a972ad64db8a38652538bceba" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "35afb60dd490d95a972ad64db8a38652538bceba" }
embassy-boot = { git = "https://github.com/embassy-rs/embassy", rev = "35afb60dd490d95a972ad64db8a38652538bceba" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "35afb60dd490d95a972ad64db8a38652538bceba" }
embassy-boot-rp = { git = "https://github.com/embassy-rs/embassy", rev = "35afb60dd490d95a972ad64db8a38652538bceba" }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy", rev = "35afb60dd490d95a972ad64db8a38652538bceba" }

[profile.release]
debug = true