[package]
name = "sensor-pod"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.3.0", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-sync = { version = "0.2.0", features = ["defmt"] }
embassy-time = { version = "0.1.3", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-boot-rp = { version = "0.1.0", default-features = false }
embassy-usb-logger = { version = "0.1.0" }
embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }

atomic-polyfill = "1.0.1"
static_cell = { version = "1.1", features = ["nightly"]}

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = "0.7.6"
cortex-m-rt = "0.7.0"
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }

embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-rc.1" }
embedded-hal-async = "1.0.0-rc.1"
embedded-io-async = { version = "0.5.0", features = ["defmt-03"] }
embedded-storage = "0.3.0"

heapless = { version = "0.7.16", features = ["defmt-impl", "serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.5.0"
postcard = "0.7.0"
log = "0.4"

bitflags = "1"
panic-reset = "0.1.1"

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "2c38dd17b9a5a507fc77d90d78486e4764234752" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "2c38dd17b9a5a507fc77d90d78486e4764234752" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "2c38dd17b9a5a507fc77d90d78486e4764234752" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "2c38dd17b9a5a507fc77d90d78486e4764234752" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "2c38dd17b9a5a507fc77d90d78486e4764234752" }
embassy-boot = { git = "https://github.com/embassy-rs/embassy", rev = "2c38dd17b9a5a507fc77d90d78486e4764234752" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "2c38dd17b9a5a507fc77d90d78486e4764234752" }
embassy-boot-rp = { git = "https://github.com/embassy-rs/embassy", rev = "2c38dd17b9a5a507fc77d90d78486e4764234752" }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy", rev = "2c38dd17b9a5a507fc77d90d78486e4764234752" }

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false