[package]
edition = "2021"
name = "sensor-pod-bootloader"
version = "0.1.0"
description = "Bootloader for sensor-pod"
license = "MIT OR Apache-2.0"

[dependencies]
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }

embassy-rp = { version = "0.1.0", default-features = false, features = ["nightly", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-boot-rp = { version = "0.1.0", default-features = false }
embassy-time = { version = "0.1.3" }
embassy-sync = { version = "0.2.0" }

cortex-m = { version = "0.7.6" }
cortex-m-rt = { version = "0.7" }
embedded-storage = "0.3.0"
embedded-storage-async = "0.3.0"
cfg-if = "1.0.0"

[features]
defmt = [
    "dep:defmt",
    "embassy-boot-rp/defmt",
    "embassy-rp/defmt",
]
debug = ["defmt-rtt", "defmt"]

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "2c38dd17b9a5a507fc77d90d78486e4764234752" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "2c38dd17b9a5a507fc77d90d78486e4764234752" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "2c38dd17b9a5a507fc77d90d78486e4764234752" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "2c38dd17b9a5a507fc77d90d78486e4764234752" }
embassy-boot = { git = "https://github.com/embassy-rs/embassy", rev = "2c38dd17b9a5a507fc77d90d78486e4764234752" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "2c38dd17b9a5a507fc77d90d78486e4764234752" }
embassy-boot-rp = { git = "https://github.com/embassy-rs/embassy", rev = "2c38dd17b9a5a507fc77d90d78486e4764234752" }

[profile.release]
debug = true
